[Semantics] Preface - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,6 +1,16 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+abbr.name{
+	white-space: nowrap;
+}
+
+footer{
+	text-align: right;
+	margin-top: 1em;
+}
+
+[epub|type~="z3998:salutation"],
 .signature{
 	font-variant: small-caps;
 }
