--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+section > header{
+	text-align: center;
+}
+
 abbr.name{
 	white-space: nowrap;
 }
@@ -8,6 +12,30 @@ abbr.name{
 footer{
 	text-align: right;
 	margin-top: 1em;
+}
+
+[epub|type~="epigraph"]{
+	font-style: italic;
+	hyphens: none;
+	margin: 3em;
+	margin-top: 0;
+	text-align: left;
+	text-indent: 0;
+	display: inline-block;
+}
+
+[epub|type~="epigraph"] i{
+	font-style: normal;
+}
+
+[epub|type~="epigraph"] cite{
+	margin-top: 1em;
+	font-style: normal;
+	font-variant: small-caps;
+}
+
+[epub|type~="epigraph"] cite i{
+	font-style: italic;
 }
 
 [epub|type~="z3998:salutation"],
