[Semantics] Story 3 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -10,6 +10,11 @@ p span.i1{
 	padding-left: 2em;
 }
 
+p span.i2{
+	text-indent: -1em;
+	padding-left: 3em;
+}
+
 p span.i7{
 	text-indent: -1em;
 	padding-left: 8em;
@@ -53,19 +58,26 @@ footer{
 	font-style: italic;
 }
 
-[epub|type~="z3998:poem"] p{
+[epub|type~="z3998:poem"] p,
+[epub|type~="z3998:verse"] p{
 	text-align: left;
 	text-indent: 0;
 }
 
-[epub|type~="z3998:poem"] p > span{
+[epub|type~="z3998:poem"] p > span,
+[epub|type~="z3998:verse"] p > span{
 	display: block;
 	text-indent: -1em;
 	padding-left: 1em;
 }
 
-[epub|type~="z3998:poem"] p > span + br{
+[epub|type~="z3998:poem"] p > span + br,
+[epub|type~="z3998:verse"] p > span + br{
 	display: none;
+}
+
+[epub|type~="z3998:poem"] p + p{
+	margin-top: 1em;
 }
 
 [epub|type~="z3998:salutation"],
