[Semantics] Story 20 - Add semantics
Add semantics and structure, and include typography updates.

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -77,12 +77,14 @@ footer{
 }
 
 [epub|type~="z3998:poem"] p,
+[epub|type~="z3998:song"] p,
 [epub|type~="z3998:verse"] p{
 	text-align: left;
 	text-indent: 0;
 }
 
 [epub|type~="z3998:poem"] p > span,
+[epub|type~="z3998:song"] p > span,
 [epub|type~="z3998:verse"] p > span{
 	display: block;
 	text-indent: -1em;
@@ -90,6 +92,7 @@ footer{
 }
 
 [epub|type~="z3998:poem"] p > span + br,
+[epub|type~="z3998:song"] p > span + br,
 [epub|type~="z3998:verse"] p > span + br{
 	display: none;
 }
