--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -15,6 +15,11 @@ p span.i2{
 	padding-left: 3em;
 }
 
+p span.i3{
+	text-indent: -1em;
+	padding-left: 4em;
+}
+
 p span.i7{
 	text-indent: -1em;
 	padding-left: 8em;
@@ -97,7 +102,9 @@ footer{
 	display: none;
 }
 
-[epub|type~="z3998:poem"] p + p{
+[epub|type~="z3998:poem"] p + p,
+[epub|type~="z3998:song"] p + p,
+[epub|type~="z3998:verse"] p + p{
 	margin-top: 1em;
 }
 
