[Typography] Clean up styling
Closes #5

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,23 +5,14 @@ section > header{
 	text-align: center;
 }
 
-table{
-	width: 100%;
-}
-
 td[epub|type~="z3998:persona"]{
-	font-variant: all-small-caps;
 	text-align: right;
-	width: 30%;
+	white-space: nowrap;
 }
 
 td{
 	vertical-align: top;
 	padding: .5em;
-}
-
-td p{
-	text-indent: 0;
 }
 
 p span.i1{
@@ -47,10 +38,6 @@ p span.i7{
 p span.i8{
 	text-indent: -1em;
 	padding-left: 9em;
-}
-
-p span.signature{
-	font-variant: small-caps;
 }
 
 abbr.name{
