--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -5,16 +5,6 @@ section > header{
 	text-align: center;
 }
 
-td[epub|type~="z3998:persona"]{
-	text-align: right;
-	white-space: nowrap;
-}
-
-td{
-	vertical-align: top;
-	padding: .5em;
-}
-
 p span.i1{
 	text-indent: -1em;
 	padding-left: 2em;
@@ -117,4 +107,48 @@ footer{
 [epub|type~="z3998:salutation"],
 .signature{
 	font-variant: small-caps;
+}
+
+[epub|type~="z3998:drama"]{
+	border-collapse: collapse;
+}
+
+[epub|type~="z3998:drama"] tr:first-child td{
+	padding-top: 0;
+}
+
+[epub|type~="z3998:drama"] tr:last-child td{
+	padding-bottom: 0;
+}
+
+[epub|type~="z3998:drama"] td{
+	vertical-align: top;
+	padding: .5em;
+}
+
+[epub|type~="z3998:drama"] td:last-child{
+	padding-right: 0;
+}
+
+[epub|type~="z3998:drama"] td:first-child{
+	padding-left: 0;
+}
+
+[epub|type~="z3998:drama"] td[epub|type~="z3998:persona"]{
+	hyphens: none;
+	text-align: right;
+	width: 20%;
+}
+
+[epub|type~="z3998:drama"] td p{
+	text-indent: 0;
+}
+
+* + [epub|type~="z3998:drama"],
+[epub|type~="z3998:drama"] + p{
+	margin-top: 1em;
+}
+
+[epub|type~="z3998:persona"]{
+	font-variant: all-small-caps;
 }
