--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -144,9 +144,9 @@ footer{
 	text-indent: 0;
 }
 
-* + [epub|type~="z3998:drama"],
-[epub|type~="z3998:drama"] + p{
-	margin-top: 1em;
+table[epub|type~="z3998:drama"]{
+	margin: 1em auto;
+	width: 100%;
 }
 
 [epub|type~="z3998:persona"]{
