Remove indent from letter first lines

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -118,6 +118,10 @@ span.elision{
 	font-variant: small-caps;
 }
 
+[epub|type~="z3998:salutation"] + p{
+	text-indent: 0;
+}
+
 [epub|type~="z3998:drama"]{
 	border-collapse: collapse;
 }
