--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -113,6 +113,13 @@ span.elision{
 	font-style: normal;
 }
 
+[epub|type~="z3998:poem"] header p,
+[epub|type~="subchapter"] header p{
+	font-variant: small-caps;
+	margin: 2em 0;
+	text-align: center;
+}
+
 [epub|type~="z3998:salutation"],
 .signature{
 	font-variant: small-caps;
