--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+span[epub|type~="subtitle"]{
+	display: block;
+	font-weight: normal;
+}
+
 section > header{
 	text-align: center;
 }
