--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -6,10 +6,6 @@ span[epub|type~="subtitle"]{
 	font-weight: normal;
 }
 
-section > header{
-	text-align: center;
-}
-
 p span.i1{
 	text-indent: -1em;
 	padding-left: 2em;
@@ -35,15 +31,6 @@ p span.i8{
 	padding-left: 9em;
 }
 
-abbr.name{
-	white-space: nowrap;
-}
-
-b{
-	font-weight: normal;
-	font-variant: small-caps;
-}
-
 footer{
 	text-align: right;
 	margin-top: 1em;
@@ -52,34 +39,9 @@ footer{
 [epub|type~="bridgehead"]{
 	display: inline-block;
 	font-style: italic;
-	margin: 0 auto 3em auto;
 	max-width: 60%;
 	text-align: justify;
 	text-indent: 0;
-}
-
-[epub|type~="epigraph"]{
-	font-style: italic;
-	hyphens: none;
-	margin: 3em;
-	margin-top: 0;
-	text-align: left;
-	text-indent: 0;
-	display: inline-block;
-}
-
-[epub|type~="epigraph"] i{
-	font-style: normal;
-}
-
-[epub|type~="epigraph"] cite{
-	margin-top: 1em;
-	font-style: normal;
-	font-variant: small-caps;
-}
-
-[epub|type~="epigraph"] cite i{
-	font-style: italic;
 }
 
 [epub|type~="z3998:poem"] p,
@@ -114,14 +76,93 @@ span.elision{
 	margin-left: 3rem;
 }
 
+/* All epigraphs */
+[epub|type~="epigraph"]{
+	font-style: italic;
+	hyphens: none;
+}
+
+[epub|type~="epigraph"] i{
+	font-style: normal;
+}
+
+[epub|type~="epigraph"] cite{
+	margin-top: 1em;
+	font-style: normal;
+	font-variant: small-caps;
+}
+
+[epub|type~="epigraph"] cite i{
+	font-style: italic;
+}
+/* End all epigraphs */
+
+/* Epigraphs in section headers */
+section > header [epub|type~="epigraph"]{
+	display: inline-block;
+	margin: auto;
+	max-width: 80%;
+	text-align: left;
+}
+
+section > header [epub|type~="epigraph"] + *{
+	margin-top: 3em;
+}
+
+@supports(display: table){
+	section > header [epub|type~="epigraph"]{
+		display: table;
+	}
+}
+/* End epigraphs in section headers */
+
+/* Full-page epigraphs */
+section[epub|type~="epigraph"]{
+	text-align: center;
+}
+
+section[epub|type~="epigraph"] > *{
+	display: inline-block;
+	margin: auto;
+	margin-top: 3em;
+	max-width: 80%;
+	text-align: left;
+}
+
+@supports(display: flex){
+	section[epub|type~="epigraph"]{
+		align-items: center;
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		min-height: calc(98vh - 3em);
+		padding-top: 3em;
+	}
+
+	section[epub|type~="epigraph"] > *{
+		margin: 0;
+	}
+}
+/* End full-page epigraphs */
+
 [epub|type~="epigraph"] span.elision{
 	font-style: normal;
 }
 
-[epub|type~="z3998:poem"] header p,
-[epub|type~="subchapter"] header p{
+[epub|type~="subchapter"] header,
+[epub|type~="z3998:poem"] header{
 	font-variant: small-caps;
-	margin: 2em 0;
+	margin-top: 3em;
+}
+
+
+[epub|type~="subchapter"] header + *,
+[epub|type~="z3998:poem"] header + *{
+	margin-top: 1em;
+}
+
+[epub|type~="z3998:poem"] header p{
 	text-align: center;
 }
 
