--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -98,19 +98,19 @@ span.elision{
 /* End all epigraphs */
 
 /* Epigraphs in section headers */
-section > header [epub|type~="epigraph"]{
+article > header [epub|type~="epigraph"]{
 	display: inline-block;
 	margin: auto;
 	max-width: 80%;
 	text-align: left;
 }
 
-section > header [epub|type~="epigraph"] + *{
+article > header [epub|type~="epigraph"] + *{
 	margin-top: 3em;
 }
 
 @supports(display: table){
-	section > header [epub|type~="epigraph"]{
+	article > header [epub|type~="epigraph"]{
 		display: table;
 	}
 }
