--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -80,6 +80,7 @@ span.elision{
 [epub|type~="epigraph"]{
 	font-style: italic;
 	hyphens: none;
+	-epub-hyphens: none;
 }
 
 [epub|type~="epigraph"] i{
@@ -201,6 +202,7 @@ section[epub|type~="epigraph"] > *{
 
 [epub|type~="z3998:drama"] td[epub|type~="z3998:persona"]{
 	hyphens: none;
+	-epub-hyphens: none;
 	text-align: right;
 	width: 20%;
 }
