--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -162,7 +162,7 @@ section[epub|type~="epigraph"] > *{
 }
 
 [epub|type~="z3998:salutation"],
-[epub:type~="z3998:signature"]{
+[epub|type~="z3998:signature"]{
 	font-variant: small-caps;
 }
 
